--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ font-family: 'Poppins', sans-serif;
 
 body{
     background: #1f1f1f;
+    color: white;
 }
 
 .header {
@@ -35,4 +36,82 @@ body{
     text-decoration: none;
     padding: 5px;
     color: aliceblue;
+    font-size: 18px;
+    font-weight: 500;
+    margin-left: 35px;   
+    transition: 0.3s;
+}
+
+.navbar a:hover,
+.navbar a#action {
+    color: #0ef;
+}
+
+.btn {
+    text-decoration: none;
+    font-weight: 300;   
+}
+
+.img-source img {
+    max-width: 350px;
+    width: 300px;
+}
+
+.home {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 70px 10% 0;
+}
+
+.home-content {
+    max-width: 600px;
+    font-weight: 300;
+}
+
+.home-content h3 {
+    font-size: 32px;
+    font-weight: 700;
+}
+
+.home-content h3 span {
+    color: #0ef;
+}
+
+.home-content h1 {
+    font-size: 56px;
+    font-weight: 800;
+    margin: -3px 0;
+}
+
+.home-content h3:nth-of-type(3){
+    margin-bottom: 30px;
+}
+
+.home-content p {
+    font-size: 16px;
+}
+
+.social-media a{
+    display:inline-flex;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid #0ef;
+    align-items: center;
+    justify-content: center;
+    border-radius:50%;
+    font-size: 20px;
+    color: #0ef;
+    text-decoration: none;
+    margin: 30px  15px 30px 0;
+    transition: 0.5s ease;
+}
+
+.social-media a:hover {
+    background: #0ef;
+    color: #1f1f1f;
 }
