--- a/style.css
+++ b/style.css
@@ -31,15 +31,21 @@ body{
     color: white;
     font-weight: 600;
     cursor: default;
+    opacity: 0;
+    animation: slideRight 1s ease forwards;
 }
 .navbar a{
+    display: inline-block;
     text-decoration: none;
     padding: 5px;
     color: aliceblue;
     font-size: 18px;
     font-weight: 500;
     margin-left: 35px;   
-    transition: 0.3s;
+    transition: 1.3s;
+    opacity: 0;
+    animation: slideTop 1s ease forwards;
+    animation-delay: calc(.2s * var(--i));
 }
 
 .navbar a:hover,
@@ -49,12 +55,28 @@ body{
 
 .btn {
     text-decoration: none;
-    font-weight: 300;   
+    font-weight: 700;
+    color: #1f1f1f;
+    font-size: 20px;   
+    display: inline-block;
+    padding: 12px 28px;
+    background: #0ef;
+    border-radius: 40px;
+    opacity: 0;
+    animation: slideTop 1s ease forwards;
+    animation-delay: .7s;
+    animation-delay: 2s;
+
 }
 
 .img-source img {
     max-width: 350px;
     width: 300px;
+    margin-left: -20px;
+    opacity: 0;
+    animation: zoomIn 1s ease forwards;
+    animation-delay: .7s;
+    animation-delay: 2s;
 }
 
 .home {
@@ -75,6 +97,9 @@ body{
 .home-content h3 {
     font-size: 32px;
     font-weight: 700;
+    opacity: 0;
+    animation: slideBottom 1s ease forwards;
+    animation-delay: .7s;
 }
 
 .home-content h3 span {
@@ -85,14 +110,23 @@ body{
     font-size: 56px;
     font-weight: 800;
     margin: -3px 0;
+    opacity: 0;
+    animation: slideRight 1s ease forwards;
+    animation-delay: .7s;
 }
 
-.home-content h3:nth-of-type(3){
+.home-content h3:nth-of-type(2){
     margin-bottom: 30px;
+    opacity: 0;
+    animation: slideTop 1s ease forwards;
+    animation-delay: .7s;
 }
 
 .home-content p {
     font-size: 16px;
+    opacity: 0;
+    animation: slideLeft 1s ease forwards;
+    animation-delay: .7s;
 }
 
 .social-media a{
@@ -109,9 +143,75 @@ body{
     text-decoration: none;
     margin: 30px  15px 30px 0;
     transition: 0.5s ease;
+    opacity: 0;
+    animation: slideLeft 1s ease forwards;
+    animation-delay: .7s;
+    animation-delay: calc(.2s * var(--i));
 }
 
 .social-media a:hover {
     background: #0ef;
     color: #1f1f1f;
+    box-shadow: 0 0 10px #0ef;
+}
+
+/* KEY FRAME ANIMATION */
+
+@keyframes slideRight {
+    0% {
+        transform:translateX(-100px);
+        opacity: 0;
+
+    }
+    100% {
+        transform:translateX(0px);
+        opacity: 1;
+        
+    }
+}
+@keyframes slideLeft {
+    0% {
+        transform:translateX(100px);
+        opacity: 0;
+
+    }
+    100% {
+        transform:translateX(0px);
+        opacity: 1;
+        
+    }
+}
+
+@keyframes slideTop {
+    0%{
+        transform:translateY(100px);
+        opacity: 0;
+    }
+    100%{
+        transform:translateY(0px);
+        opacity: 1;
+    }
+}
+
+@keyframes slideBottom {
+    0% {
+        transform: translateY(-100px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+    
+}
+
+@keyframes zoomIn {
+    0% {
+        transform: scale(0);
+        opacity: 0;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
 }
